--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "author": {
     "name": "Flavio Corpa",
-    "url": "https://github.com/kutyel"
+    "email": "flaviocorpa@gmail.com",
+    "url": "http://flaviocorpa.com"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,7 @@
     "url": "https://github.com/kutyel/es6-emitter/issues"
   },
   "keywords": [],
-  "dependencies": {
-    "meow": "~3.7.0",
-    "update-notifier": "~2.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "coveralls": "latest",
     "git-dirty": "latest",
@@ -54,6 +52,5 @@
     "test:w": "jest --watch",
     "test": "jest --coverage"
   },
-  "preferGlobal": true,
   "license": "MIT"
 }
