Replace globals by env in standardjs ✨

--- a/package.json
+++ b/package.json
@@ -60,12 +60,8 @@
     "testEnvironment": "node"
   },
   "standard": {
-    "globals": [
-      "describe",
-      "expect",
-      "jest",
-      "test",
-      "it"
+    "env": [
+      "jest"
     ]
   }
 }
