--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "coveralls": "latest",
     "git-dirty": "latest",
     "jest": "^22.0.0",
-    "merge": ">=1.2.1"
+    "merge": ">=1.2.1",
     "prettier-standard": "latest",
     "standard": "latest"
   },
