--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ############################
 node_modules
 npm-debug.log
+package-lock.json
 
 ############################
 # tmp, editor & OS files
@@ -31,3 +32,4 @@ coverage
 # Other
 ############################
 .node_history
+dist
