--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 node_js:
-  - "node"
-  - "lts/*"
+  - 'node'
+  - 'lts/*'
+before_script:
+  - npm run clean
+script:
+  - npm run build
 after_success: npm run coveralls
